fix: real device benchmarks

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.11.1",
     "@gluestack-style/animation-plugin": "0.1.12",
-    "@gluestack-style/react": "0.2.45",
-    "@gluestack-ui/themed": "0.1.39",
+    "@gluestack-style/react": "^0.2.46-alpha.0",
+    "@gluestack-ui/themed": "^0.1.42",
     "@gluestack-ui/themed-native-base": "^0.1.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -35,6 +35,7 @@
     "expo-font": "11.4.0",
     "expo-splash-screen": "0.20.5",
     "expo-status-bar": "1.6.0",
+    "expo-updates": "~0.18.12",
     "gluestack-ui": "0.4.8",
     "native-base": "^3.4.28",
     "nativewind": "2.0.11",
@@ -51,7 +52,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
-    "@gluestack-style/babel-plugin-styled-resolver": "^0.2.5-alpha.0",
+    "@gluestack-style/babel-plugin-styled-resolver": "^0.2.6-alpha.0",
     "@tamagui/babel-plugin": "1.47.3",
     "@types/react-native": "0.72.2",
     "react-native": "0.72.3",
