--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.11.1",
     "@gluestack-style/animation-plugin": "0.1.12",
-    "@gluestack-style/react": "^0.2.46-alpha.0",
-    "@gluestack-ui/themed": "^0.1.42",
+    "@gluestack-style/react": "^1.0.4",
+    "@gluestack-ui/themed": "^1.0.4",
     "@gluestack-ui/themed-native-base": "^0.1.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@shopify/restyle": "2.4.2",
     "@tamagui/animations-react-native": "1.47.3",
     "@tamagui/config": "1.47.3",
-    "@tamagui/core": "1.47.3",
+    "@tamagui/core": "^1.74.15",
     "@tamagui/font-inter": "1.47.3",
+    "@tamagui/helpers": "^1.74.15",
     "@tamagui/react-native-media-driver": "1.47.3",
     "@tamagui/shorthands": "1.47.3",
     "@tamagui/theme-base": "1.47.3",
@@ -47,7 +48,7 @@
     "react-native-web": "0.19.7",
     "react-native-zephyr": "1.1.2",
     "styled-components": "^6.0.7",
-    "tamagui": "^1.61.1",
+    "tamagui": "^1.74.15",
     "twrnc": "^3.6.3"
   },
   "devDependencies": {
