improve some tamagui setup

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start-native": "GLUESTACK_STYLE_TARGET=native TAMAGUI_TARGET=native expo start -c",
-    "start-native-release-mode": "GLUESTACK_STYLE_TARGET=native TAMAGUI_TARGET=native expo start --no-dev --minify",
+    "start-native": "GLUESTACK_STYLE_TARGET=native TAMAGUI_OPTIMIZE_NATIVE_VIEWS=1 expo start -c",
+    "start-native-release-mode": "GLUESTACK_STYLE_TARGET=native TAMAGUI_OPTIMIZE_NATIVE_VIEWS=1 expo start --no-dev --minify",
     "start-web": "GLUESTACK_STYLE_TARGET=web TAMAGUI_TARGET=web expo start -c",
-    "android": "GLUESTACK_STYLE_TARGET=native TAMAGUI_TARGET=native yarn expo run:android",
-    "ios": "GLUESTACK_STYLE_TARGET=native TAMAGUI_TARGET=native yarn expo run:ios",
+    "android": "GLUESTACK_STYLE_TARGET=native TAMAGUI_OPTIMIZE_NATIVE_VIEWS=1 yarn expo run:android",
+    "ios": "GLUESTACK_STYLE_TARGET=native TAMAGUI_OPTIMIZE_NATIVE_VIEWS=1 yarn expo run:ios",
     "web": "GLUESTACK_STYLE_TARGET=web TAMAGUI_TARGET=web expo start --web"
   },
   "dependencies": {
@@ -20,15 +20,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@shopify/restyle": "2.4.2",
-    "@tamagui/animations-react-native": "1.47.3",
-    "@tamagui/config": "1.47.3",
-    "@tamagui/core": "^1.74.15",
-    "@tamagui/font-inter": "1.47.3",
-    "@tamagui/helpers": "^1.74.15",
-    "@tamagui/react-native-media-driver": "1.47.3",
-    "@tamagui/shorthands": "1.47.3",
-    "@tamagui/theme-base": "1.47.3",
-    "@tamagui/themes": "1.47.3",
+    "@tamagui/config": "1.74.21",
+    "tamagui": "1.74.21",
     "@types/react": "18.2.17",
     "babel-plugin-transform-inline-environment-variables": "0.4.4",
     "dripsy": "4.3.3",
@@ -48,13 +41,12 @@
     "react-native-web": "0.19.7",
     "react-native-zephyr": "1.1.2",
     "styled-components": "^6.0.7",
-    "tamagui": "^1.74.15",
     "twrnc": "^3.6.3"
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
     "@gluestack-style/babel-plugin-styled-resolver": "^0.2.6-alpha.0",
-    "@tamagui/babel-plugin": "1.47.3",
+    "@tamagui/babel-plugin": "1.74.21",
     "@types/react-native": "0.72.2",
     "react-native": "0.72.3",
     "react-native-web": "0.19.7",
