--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.11.1",
-    "@gluestack-style/animation-plugin": "0.1.12",
-    "@gluestack-style/react": "^1.0.4",
-    "@gluestack-ui/themed": "^1.0.4",
+    "@gluestack-style/react": "1.0.48",
+    "@gluestack-ui/config": "^1.1.10",
+    "@gluestack-ui/themed": "1.1.9",
     "@gluestack-ui/themed-native-base": "^0.1.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.22.9",
-    "@gluestack-style/babel-plugin-styled-resolver": "^0.2.6-alpha.0",
+    "@gluestack-style/babel-plugin-styled-resolver": "1.0.5",
     "@tamagui/babel-plugin": "1.47.3",
     "@types/react-native": "0.72.2",
     "react-native": "0.72.3",
