feat: gluestack v2 benchmarks

--- a/package.json
+++ b/package.json
@@ -14,47 +14,47 @@
     "@emotion/native": "11.11.0",
     "@emotion/react": "11.11.1",
     "@gluestack-style/animation-plugin": "0.1.12",
-    "@gluestack-style/react": "^1.0.4",
+    "@gluestack-style/react": "1.0.57",
     "@gluestack-ui/themed": "^1.0.4",
     "@gluestack-ui/themed-native-base": "^0.1.7",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@shopify/restyle": "2.4.2",
-    "@tamagui/animations-react-native": "1.47.3",
-    "@tamagui/config": "1.47.3",
-    "@tamagui/core": "^1.74.15",
-    "@tamagui/font-inter": "1.47.3",
-    "@tamagui/helpers": "^1.74.15",
-    "@tamagui/react-native-media-driver": "1.47.3",
-    "@tamagui/shorthands": "1.47.3",
-    "@tamagui/theme-base": "1.47.3",
-    "@tamagui/themes": "1.47.3",
-    "@types/react": "18.2.17",
+    "@tamagui/animations-react-native": "1.102.1",
+    "@tamagui/config": "1.102.1",
+    "@tamagui/core": "^1..102.1",
+    "@tamagui/font-inter": "1.102.1",
+    "@tamagui/helpers": "^1..102.1",
+    "@tamagui/react-native-media-driver": "1.102.1",
+    "@tamagui/shorthands": "1.102.1",
+    "@tamagui/theme-base": "1.102.1",
+    "@tamagui/themes": "1.102.1",
+    "@types/react": "~18.2.79",
     "babel-plugin-transform-inline-environment-variables": "0.4.4",
     "dripsy": "4.3.3",
-    "expo": "49.0.6",
-    "expo-font": "11.4.0",
-    "expo-splash-screen": "0.20.5",
-    "expo-status-bar": "1.6.0",
-    "expo-updates": "~0.18.12",
+    "expo": "^51.0.18",
+    "expo-font": "~12.0.7",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.18",
     "gluestack-ui": "0.4.8",
     "native-base": "^3.4.28",
     "nativewind": "2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-web": "0.19.7",
+    "react-native": "0.74.3",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
     "react-native-zephyr": "1.1.2",
     "styled-components": "^6.0.7",
-    "tamagui": "^1.74.15",
+    "tamagui": "^1.102.1",
     "twrnc": "^3.6.3"
   },
   "devDependencies": {
-    "@babel/core": "7.22.9",
-    "@gluestack-style/babel-plugin-styled-resolver": "^0.2.6-alpha.0",
-    "@tamagui/babel-plugin": "1.47.3",
+    "@babel/core": "^7.24.0",
+    "@gluestack-style/babel-plugin-styled-resolver": "^1.0.7",
+    "@tamagui/babel-plugin": "1.102.1",
     "@types/react-native": "0.72.2",
     "react-native": "0.72.3",
     "react-native-web": "0.19.7",
