--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-native-zephyr": "1.1.2",
-    "styled-components": "^6.0.7",
+    "styled-components": "6.1.11",
     "tamagui": "^1.102.1",
     "twrnc": "^3.6.3"
   },
